/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

package dolittle.events.relativity.microservice;

import "Events.Relativity/Microservice/claim.proto";

option csharp_namespace = "Dolittle.Events.Relativity.Microservice";

// Represents the execution context
message ExecutionContext {
    bytes application = 1;
    bytes boundedContext = 2;
    bytes tenant = 3;
    bytes correlationId = 4;
    string environment = 5;
    repeated Claim claims = 6;
    string culture = 7;
}